store/src/styles/components/kiosk.scss
/* ... */
.hern-kiosk-cart-product-modifiers-product-option {
   display: flex;
   justify-content: space-between;
   margin-left: 1em;
   > span {
      font-style: normal;
      font-weight: normal;
      font-size: 1.5em;
      line-height: 1em;
      color: #555b6e;
      margin: 10px 0;
   }
}
.hern-kiosk-cart-product-modifiers-list {
   ul {
      margin-left: 1em;
   }
   li {
      display: flex;
      justify-content: space-between;
      font-style: normal;
      font-weight: normal;
      font-size: 1.2em;
      line-height: 1em;
      color: #555b6e;
      margin: 0.6em 0;
   }
   .hern-kiosk__modifier-details {
      display: flex;
      justify-content: space-between;
      font-style: normal;
      font-weight: normal;
      font-size: 1.2em;
      line-height: 1em;
      color: #555b6e;
      margin: 0.6em 0;
   }
   .hern-kiosk__parent-modifier-list {
      flex-direction: column;
   }
}
.hern-kiosk-cart-product-modifiers-heading {
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 16px;
}
.hern-kiosk__cart-place-order-btn {
   padding: 2em 2em;
   height: 2.5em;
   display: flex;
   align-items: center;
   width: 100%;
   justify-content: center;
   .hern-kiosk__cart-place-order-btn-text {
      font-size: 1.5em;
      margin: 0 1em;
   }
   .hern-kiosk__cart-place-order-btn-total {
      font-size: 1.3em;
   }
}
.hern-kiosk__goto-cart-btn {
   padding: 1em 1em;
   height: 2.5em;
   display: flex;
   align-items: center;
   // width: 100%;
   justify-content: center;
   .hern-kiosk__goto-cart-btn-text {
      font-size: 1em;
      margin: 0 1em;
      white-space: nowrap;
   }
}
.hern-kiosk__cart-item-badge {
   background: #ff0000;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 31px;
   height: 31px;
   font-size: 18px;
   font-weight: 600;
   border-radius: 50%;
   padding: 10px;
   color: #fff;
}
.hern-kiosk__cart-payment-method-label {
   color: #5a5a5a;
   font-size: 1.3em;
   font-weight: 600;
}
.hern-kiosk__cart-offers-container {
}
.hern-kiosk__cart-offers-header {
   > span {
      font-size: 1.8em;
      letter-spacing: 0.08em;
   }
}
.hern-kiosk__cart-offers-content {
   display: grid;
   grid-template-columns: 0.7fr 8fr 2.5fr;
   -webkit-align-items: center;
   align-items: center;
}
.hern-kiosk__cart-offer-add-coupon {
   font-size: 1.5em;
   font-weight: 600;
   letter-spacing: 0.08em;
}

.hern-kiosk__cart-offers-view-all {
   text-align: end;
   font-size: 1.5em;
   font-weight: 600;
   letter-spacing: 0.08em;
}
.hern-kiosk__modifier-option-customize-rtl {
   bottom: -15px;
   left: 4px;
}
.hern-kiosk__modifier-option-customize-ltr {
   right: 0;
   bottom: -10px;
}

// kiosk product gallery
.hern-kiosk__product-gallery-p-image {
   width: 60%;
}
.hern-kiosk__product-gallery-container {
   margin: 1em 0;
   padding: 1em;
   position: relative;
   font-weight: 500;
   letter-spacing: 0.06em;
}
.hern-kiosk__product-gallery-title {
   font-size: 1.875em;
   color: #5a5a5a;
   z-index: 100;
   position: sticky;
}
.hern-kiosk__product-gallery {
   position: relative;
   margin-top: 1em;
}
.hern-kiosk__product-gallery-card {
   display: flex;
   align-items: center;

   // border-right: 3px solid rgba(64, 64, 64, 0.4);
   padding: 1em;
   // min-width: 330px;
   position: relative;
   width: 220px;
   height: 250px;
   box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
   border-radius: 20px;
   flex-direction: column;
   margin: 0 auto;
   margin-bottom: 1em;
   justify-content: space-around;
   background: #ffffff;
   &:last-child {
      border-right: unset;
   }
}
.hern-kiosk__product-card-details {
   display: flex;
   flex-direction: column;
   margin-left: 6px;
   align-items: center;
   color: #5a5a5a;
   width: 100%;
}
.hern-kiosk__product-gallery-product-name {
   font-size: 21px;
   font-weight: bold;
   color: #5a5a5a;
   width: 100%;
   text-align: center;
}
.hern-kiosk__product-gallery-product-price {
   font-size: 20px;
   white-space: nowrap;
   font-weight: bold;
   color: #5a5a5a;
}
.hern-kiosk__product-gallery-add-btn {
   position: absolute;
   padding: 0 10px;
   bottom: -13px;
}
.hern-kiosk__product-gallery-background {
   position: absolute;
   left: 0;
   top: 0;
}

